fix "collapse menu" link color

--- a/packages/calypso-color-schemes/src/shared/color-schemes/_blue.scss
+++ b/packages/calypso-color-schemes/src/shared/color-schemes/_blue.scss
@@ -152,4 +152,7 @@ Used studio-blue for the primary+accent.
 
 	/* Command Palette Items */
 	--wp-admin-theme-color: var(--theme-highlight-color);
+
+	/* Collapse Menu Button Fix */
+	--color-collapse-menu-text: var(--theme-icon-color);
 }
